--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@react-native-community/checkbox": "^0.5.15",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-calendars": "^1.1294.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-shadow-2": "^7.0.6",
+    "react-native-slideable-calendar-strip": "^0.4.0",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
