--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-calendars": "^1.1294.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-phone-number-input": "^2.1.0",
