--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "date-fns": "^2.29.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
@@ -27,7 +28,9 @@
     "react-native-shadow-2": "^7.0.6",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-svg": "^13.8.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
